--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
     "dev": "vitepress dev docs",
     "build": "vitepress build docs",
     "preview": "vitepress preview docs",
-    "docs:dev": "vitepress dev docs",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "deploy": "gh-pages -d docs/.vitepress/dist"
   },
   "devDependencies": {
+    "gh-pages": "^6.1.1",
     "vitepress": "^1.2.2"
   }
 }
