--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "dev": "vitepress dev docs",
     "build": "vitepress build docs",
     "preview": "vitepress preview docs",
-    "deploy": "gh-pages -d docs/.vitepress/dist"
+    "deploy": "vitepress build docs && gh-pages -d docs/.vitepress/dist",
+    "push": "git add . && git commit -m 'update' && git push"
   },
   "devDependencies": {
     "gh-pages": "^6.1.1",
